--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,12 @@
-title: bowline
+title: Learn to tie a bowline
 hero_image: images/banner.png
-description: bowline description
+description: A secure loop that's easy to untie
 version: 4
 listed: false
 copyedit: false
 last_tested: "2018-04-19"
 steps:
   - title: Introduction
-  - title: What you will need
-  - title: Step title
+  - title: Start with a loop
+  - title: A second loop
+  - title: Completing the knot
