--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 title: Learn to tie a bowline
-hero_image: images/banner.png
+hero_image: images/banner.jpg
 description: A secure loop that's easy to untie
 version: 4
 listed: false
